--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,10 @@
 
 .fossil{
   border: 3px solid black;
-  margin-bottom: 2px;
   width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .fossil-container {
@@ -49,4 +51,8 @@
   justify-content: center;
   padding: 10px;
   flex-wrap: wrap;
+}
+
+.fossil > img {
+  width: 75%;
 }
