--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 
 .fossil, .villager, .song {
   border: 3px solid black;
-  width: 400px;
+  width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,4 +55,9 @@
 
 .fossil > img, .villager > img, .song > img {
   width: 75%;
+}
+
+.card-link {
+  color: black;
+  text-decoration: none;
 }
