--- a/src/App.css
+++ b/src/App.css
@@ -121,13 +121,13 @@ nav, .dropdown-menu, .dropdown-item, .nav-item, .nav-link, .navbar-brand{
   background-color: var(--color-two);
   color: var(--color-three);
   font-weight: bold;
-  font-size: small;
+  font-size: medium;
 }
 
 .navbar-toggler {
   color: var(--color-two);
   background-color: var(--color-one);
-  font-size: small;
+  font-size: medium;
 }
 
 .nav-link:focus, .nav-link:hover, .navbar-brand:hover {
@@ -135,6 +135,6 @@ nav, .dropdown-menu, .dropdown-item, .nav-item, .nav-link, .navbar-brand{
 }
 
 .form-control {
-  font-size: small;
+  font-size: medium;
 }
 
