--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 10px;
+}
+
+.fossil, .song {
+  background-color: var(--color-two);
 }
 
 .song-details {
