--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
 /* Alternate option using small squares */
 /* Orange on green */
 .App {
+  font-family: 'FinkHeavy';
   text-align: center;
   background-color: var(--color-one);
   background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 10h10v10H0V10zM10 0h10v10H10V0z' fill='%23ffe5a1' fill-opacity='0.5' fill-rule='evenodd'/%3E%3C/svg%3E");
